--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CodeRacer</title>
+    <script src="js/coderacer.js"></script>
+    <script src="js/processor.js"></script>
 </head>
 <body>
-    
+    <div id="left-panel">
+        <div id="editor">
+            <textarea name="editor" id="editor-field" cols="30" rows="10"></textarea>
+        </div>
+    </div>
+    <div id="right-panel">
+        <div id="game">
+            <canvas id="game-field"></canvas>
+        </div>
+        <div id="console"></div>
+    </div>
+    <script src="js/editor.js"></script>
+    <script src="js/game.js"></script>
 </body>
 </html>
