--- a/src/index.html
+++ b/src/index.html
@@ -7,20 +7,23 @@
     <title>CodeRacer</title>
     <script src="js/coderacer.js"></script>
     <script src="js/processor.js"></script>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div id="left-panel">
-        <div id="editor">
+    <div id="left-panel" class="panel">
+        <div id="editor" class="field">
             <textarea name="editor" id="editor-field" cols="30" rows="10"></textarea>
         </div>
+        <div id="controls" class="field"></div>
     </div>
-    <div id="right-panel">
-        <div id="game">
+    <div id="right-panel" class="panel">
+        <div id="game" class="field">
             <canvas id="game-field"></canvas>
         </div>
-        <div id="console"></div>
+        <div id="console" class="field"></div>
     </div>
     <script src="js/editor.js"></script>
     <script src="js/game.js"></script>
+    <script src="js/init.js"></script>
 </body>
 </html>
