Made the shell working

--- a/src/index.html
+++ b/src/index.html
@@ -20,10 +20,13 @@
         <div id="game" class="field">
             <canvas id="game-field"></canvas>
         </div>
-        <div id="console" class="field"></div>
+        <div id="shell" class="field">
+            <p class="shell-output">Welcome to CodeRacer!</p>
+        </div>
     </div>
     <script src="js/editor.js"></script>
     <script src="js/game.js"></script>
+    <script src="js/shell.js"></script>
     <script src="js/init.js"></script>
 </body>
 </html>
