Added a button that does nothing

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,9 @@
         <div id="editor" class="field">
             <textarea name="editor" id="editor-field" cols="30" rows="10"></textarea>
         </div>
-        <div id="controls" class="field"></div>
+        <div id="controls" class="field">
+            <button class="control" id="check-code">Check code</button>
+        </div>
     </div>
     <div id="right-panel" class="panel">
         <div id="game" class="field">
